# ChangeLog for dev-python/execnet
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/execnet/ChangeLog,v 1.19 2014/03/31 20:33:31 mgorny Exp $

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> execnet-1.1-r1.ebuild,
  execnet-1.2.0.ebuild:
  Add support for the new PyPy slotting.

*execnet-1.2.0 (29 Jan 2014)

  29 Jan 2014; Andrey Grozin <grozin@gentoo.org> +execnet-1.2.0.ebuild:
  Version bump

  03 Dec 2013; Mike Gilbert <floppym@gentoo.org> execnet-1.1-r1.ebuild:
  Revert last change and replace distutils-r1_python_test with distutils-
  r1_src_test.

  03 Dec 2013; Mike Gilbert <floppym@gentoo.org> execnet-1.1-r1.ebuild:
  Remove pointless src_test function.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> execnet-1.1-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*execnet-1.1-r1 (20 Jan 2013)

  20 Jan 2013; Michał Górny <mgorny@gentoo.org> +execnet-1.1-r1.ebuild:
  Migrate to distutils-r1.

*execnet-1.1 (21 Jun 2012)

  21 Jun 2012; Andrey Grozin <grozin@gentoo.org> +execnet-1.1.ebuild:
  Version bump

  05 Aug 2011; Markos Chandras <hwoarang@gentoo.org>
  -files/execnet-1.0.6-test-nice.patch, -execnet-1.0.8.ebuild:
  Remove old ebuild. Requested by Arfrever

*execnet-1.0.9 (24 Dec 2010)

  24 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +execnet-1.0.9.ebuild:
  Version bump.

  30 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -execnet-1.0.7.ebuild:
  Delete.

*execnet-1.0.8 (31 Jul 2010)

  31 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -execnet-1.0.6.ebuild, +execnet-1.0.8.ebuild:
  Version bump.

*execnet-1.0.7 (07 Jul 2010)

  07 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -execnet-1.0.5.ebuild, -files/execnet-1.0.5-test-nice.patch,
  +execnet-1.0.7.ebuild:
  Version bump.

  03 May 2010; Andrey Grozin <grozin@gentoo.org> execnet-1.0.6.ebuild,