@@ -1,31 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST execnet-1.0.9.zip 297854 SHA256 ab974982ce5f9a3b7aa81da08e9605716d77a61abdf61f2f0846456e7fa91386 SHA512 7bd2577fc06aa8530d6e758ac0b9b88587b582b9a86cd26c58bec8d7b49e531145c1777da2e0122c1fe9d66db13b27a1e7f6e689839c923eb33ea88571697aa3 WHIRLPOOL 998fa06fb4dcd690f8f210da194d93ec9301dfa32d68757730b05da9775d7783bdbae8fbdef60ffcfc33051666d718262ddb570cdd10000813eb05a64025be91
 DIST execnet-1.1.zip 324708 SHA256 fa1d8bd6b6d2282ff4df474b8ac687e1775bff4fc6462b219a5f89d5e9e6908c SHA512 52ccdeca41229aed44e62e34476f42126ec00ef0c878267de3a5c706bf265d1d79945b9fd27f608b9cdc5512bda66662b545f96053160fbadb568f667e95a71e WHIRLPOOL 93a5bfd46e37838cd429daf827d712832c54102aa75d57e78970481b19dc2763de760332aefc5026f2c190043ef636fc35a45a47c4a7034af2925600d60b6d96
 DIST execnet-1.2.0.tar.gz 163876 SHA256 951714caa0ae80237f4ffc1f08450e9e2e5f8f902beaf1ad294020875d6f8c2c SHA512 bf4eb1c07832628863f3d315510628343bc4504050311a277a86100a825df8ed5f6b65f58db28ea6733f3886b6007eae7fd33586721374f9ffb3687e9b95d5c4 WHIRLPOOL 898d9427d55e316f2cdfe06d8dadd0f40d8d2374802b419c9b7aac279eed36919f8dc0084c9c253b3b3d75e9dd50ec2748ef2227e803bf900d7d8b0d5395c45e
-EBUILD execnet-1.0.9.ebuild 978 SHA256 9569361cd3c108704bf1922f5e7c539d504fbf5473490eeef3961bfc19491e48 SHA512 88814d4c4716a1f290c9744423762d5dca4fc44c7085d82d0c99880f42f95df5faa735aa07f4b787903f3b068bd140914871052f20320ff219e69616b452e313 WHIRLPOOL efc3c5c7d9641a757c91dc2f1529cd3a03a9df01e63240d586b60381816e31810dd5ef79c4c6643ccb7dbb5e0f7b02d9aada561ab08fb140a2f7d9587f149137
 EBUILD execnet-1.1-r1.ebuild 1201 SHA256 becb382e88fd7ccad446dfdf673cc7d773ca3c3c2a1680f0addd06fbe70d37d7 SHA512 378a57810e4d4eae8edc2ff9c778ed33f491e92b85cbbb6d7fc754e4e95796ae73da77da56548f7a5e656f97b0f4a7d4d87f77802ef17589bbb40d8504f3eb06 WHIRLPOOL f10e0d358028ddb6b6f1bab8ec77f0e9468d04082eba6a8830736cdf5339e8a35077f994c02832804a21463fc1925e2471b63068ed04dbef44f20018095f9098
 EBUILD execnet-1.1.ebuild 882 SHA256 2f94a327c4446fcd22ff01809778c586b8dcd86fbf4a61115cf060eaced7510e SHA512 be6d9080860c8c5d23c1607d6e7859f640f5ff50f672f0246a6a3b9ac71a568e0731df25bcaecd823f7c459d2ec439504f40a4d8f9af4e568b6a07eecd2c76a4 WHIRLPOOL 2953922232b9f3213f5801045f479c4f602b3d9987e5c000bbabfe7da7392d18d3a9f02210611964c4d7ba05aa6140b58303c002442d2b2c60d30fe6841030b8
-EBUILD execnet-1.2.0.ebuild 1189 SHA256 319fe1f2e8363bc536b6a8b3121b8607131d8e05fc595b8ed56c00dc1bc96e91 SHA512 f3717d18f24c397991aa6ce0734937a8f3225f7b564cc683c069272c29069b4b1950f7fc5f8d4c1281c246f5ef174dfaa90fb3685515d6eba113e519915beec2 WHIRLPOOL 0585fb33389d0ceca59f32f1645dd5efc85763ea690f52a2aa9a976affd6952b4d96db0a1927baaa188c997ae888fceb561458588d9d217a2db128055215dafe
-MISC ChangeLog 2912 SHA256 a7d7d9714b94e13c8689219c1d544a85423f0751d289b769409dece430b46718 SHA512 675a0c989d3e1c0b4f13d44806eb3ab242618c955256c04211e045d6545d3a1d537b86e97b75754f9f7386aa9af5d3e5110a4826454e97273337ebe85a6e5956 WHIRLPOOL afdc1b6374d69c1f69618594c237d195741f2afcdb2b699a28ef708a0b689b9363f0c4373d6c61fff80990982ebd55221e14f7390a417f233887f9315a73e824
+EBUILD execnet-1.2.0-r1.ebuild 1403 SHA256 33b7c9c963fcb720f15ff1a1654f7b1de64dbb49f68c096e71fe9f4d96287ee5 SHA512 6967de36c0e0f3646ff4995b19f9a741d81724310e9a31234af160f045a4df7aecd5c32ab883e09fab74f881cd37b5f6123a9f0596fa2509b3aa666cc7b8f9f1 WHIRLPOOL 65a358911aff1024528307730a384ad567f381410b2bd3c9c2feda40982cb47359bd168f9d79572c1dd0f0c7e3a884ccf41695173b3d398d60b720d5b833f81c
+MISC ChangeLog 3245 SHA256 ae89ec8b45cb920a9cb2a583e7a37b7d54938c56ddbbf57ec6e2eed1e23e5ca1 SHA512 2620b5cb54a7cdd5b1f984de2bb7e4de3b4b2a22c8a99aceb99b9161d68a5d1924701ca2da58cbfdea69d6485f8ada1a8a312a433bcbb78684600f660c77a65a WHIRLPOOL 7d2518c87ed31cfcee445674e535ef578dddde32e2640e9ba02754a224c82fa82d2270758622034cbb87ab67cda796e216483bb43fd499dd8c482d295c84e28b
 MISC metadata.xml 443 SHA256 b38fdb5d7dba3a8b2167cf95e64ec10f8e01c911ea5397a2efd00ffbecc0865e SHA512 db1c66776ca96df607ef08a806f41954b1b7677fa32c02e33ae67a8daaf04b797c6f8bbc17e53fdbfadc0cb473ead82347fa1374dace31fb18722428bd7a91cf WHIRLPOOL bec892ffd13dcd5b7744c2fb0a049007cc628fa6047d0b4f232ee91552bd2e62d2e17d564aab77435f62d6285d4e237f493f95ca8f63f1b740de070f4b9eb617
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTOdEgXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOGdkP/3kGwyzQ9WA7gvD/lKUvQEjj
-dywseK8ozbODqhZRADpNlPhYs7npYsAAh6QkAg71SHQidp9Qj55GiRgOgMFZhKHx
-UaoeM3L0lj42QpF8UZx76pARniFSGZjI2eTHGhUfytI1IbHS9hzoIXkzX2kQCZf1
-ZVTVIMAZGw5KxDjfq1G/jx0hDRyq7YdEu6BwvED9y6PtB5N7KJboB/eydLr3001G
-z037ETc3qWj62gZR+VEAXdiHs4ESGDtHzz6eAzvT/qEicIaeHes8FRqx6k8pCRzw
-U2fBCwL4S1POqumfSZlXJIgk0aJFmVqt7nEoKD76Sp9NS+E/FlbYlABZ0EAQp0b/
-OL0gqtNIQ1l3MieI9acebh2zEa0mO7JSzWeCY7WhhgkVIGj5xZXmbWVLBJbf7h+x
-hRQVO8iZbegKZ9/uYm3Mqkrpf4hd+K/+JoQNZRbEvSfY+LLKhLmyMwFgtqNpJ6W1
-lMKNrgwIqN0Es/symOmQOAP0IXCCyXHsoorGeYz1XA/nTPnvftm3IwP3I50Jmfre
-0uIfmfcfes/fBouEF8oP57k1WG6TFVeCNBbFGXaPoQYk2jS38r9qRrEnYjoddp3G
-MYO4owDrdAOhNQ+4lzvWv8vIjcuMnTGlOlspIcs7fbb9B4mGl1S7c2IVna4rFFZc
-Nv8II5HVgSa5lGKDsHnt
-=v5aW
+iEYEAREIAAYFAlQtIpwACgkQso7CE7gHKw3O9QCg1ms4Cn1zyADunUWKv1AGabe/
+zHQAoIopDinDcdStSXsuaoXUTSfqEwuT
+=rkxc
 -----END PGP SIGNATURE-----
